# File_Sorter

./: .gitignore  CMakeLists.txt  README.md  build_and_test.cmd  del_results.bat  run_demo.bat  run_tests.bat
examples/: config.txt
examples/demo_source/: README  duplicate.txt  unknown.xyz
examples/demo_source/documents/: duplicate.txt
include/: Checksum.hpp  Config.hpp  FileSorter.hpp  Logger.hpp  PathUtils.hpp  Statistics.hpp
src/: Checksum.cpp  Config.cpp  FileSorter.cpp  Logger.cpp  PathUtils.cpp  Statistics.cpp  main.cpp
tests/: test_main.cpp
